feat: Implement forgot password with OTP and add user details
